# brief_decoder_lite-

./: .gitignore  AI_USAGE.md  Makefile  PLAN.md  README.md  implementation_plan.md  notes.md  openapi.json  provider_usage.md  task.md  tz_origin.md
backend/: Makefile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 711e1becfddc_create_briefs_table.py  e269b8eda381_add_task_timings.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: system.py
backend/app/api/v1/: briefs.py
backend/app/core/: config.py  errors.py  exceptions.py  logging_config.py  validations.py
backend/app/core/providers/: __init__.py  base.py  fake.py  gemini.py  prompts.py  retry.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  brief.py
backend/app/repositories/: __init__.py  base.py  brief.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py  brief_service.py  cleanup_service.py
backend/config/: settings.toml
backend/tests/: conftest.py  test_briefs.py  test_system.py  test_validations.py
extention/: package-lock.json  package.json  wxt.config.ts
extention/api/: client.ts  contracts.ts  types.ts
extention/components/BriefCard/: BriefCard.module.css  BriefCard.tsx
extention/components/Dashboard/: Dashboard.module.css  Dashboard.tsx
extention/components/ParserForm/: ParserForm.module.css  ParserForm.tsx
extention/config/: index.ts
extention/entrypoints/: background.ts  content.ts
extention/entrypoints/sidepanel/: App.tsx  (+1 more)
(+2 files in other folders)
